docs(html update) update chanmao.html

--- a/chanmao.html
+++ b/chanmao.html
@@ -69,19 +69,19 @@
 
 						<ul class="one-page-menu" data-easing="easeInOutExpo" data-speed="1250" data-offset="160">
 							<li><a href="#" data-href="#wrapper"><div>首页</div></a></li>
-							<li><a href="#" data-href="#section-nextgen"><div>特点</div></a>
-								<ul>
+							<li><a href="#" data-href="#section-nextgen"><div>产品介绍</div></a>
+								<!--<ul>
 									<li><a href="#" data-href="#section-nextgen"><div>NextGen Framework</div></a></li>
 									<li><a href="#" data-href="#section-stunning-graphics"><div>Stunning Graphics</div></a></li>
 									<li><a href="#" data-href="#section-secured-solutions"><div>Secured Solutions</div></a></li>
-								</ul>
+								</ul>-->
 							</li>
-							<li><a href="#" data-href="#section-pricing"><div>下载页面</div></a></li>
+							<li><a href="#" data-href="#section-pricing"><div>App下载</div></a></li>
 						</ul>
 
 						<ul class="one-page-menu" data-easing="easeInOutExpo" data-speed="1250" data-offset="160">
 							<li><a href="#" data-href="#section-faqs"><div>FAQs</div></a></li>
-							<li><a href="#" data-href="#section-gallery"><div>使用说明截图</div></a></li>
+							<li><a href="#" data-href="#section-gallery"><div>使用说明</div></a></li>
 							<li class="menu-item-emphasis"><a href="https://www.chanmao.ca/" ><div>在线订餐</div></a></li>
 						</ul>
 
@@ -100,10 +100,10 @@
 						<div class="row clearfix">
 							<div class="col-md-6 col-sm-8">
 								<div class="emphasis-title">
-									<h1 class="font-body">馋猫，<br>让美食来敲门.</h1>
+									<h1 class="font-body">馋猫，<br>&nbsp;&nbsp;让美食来敲门.</h1>
 								</div>
-								<a href="#" data-scrollto="#section-pricing" data-easing="easeInOutExpo" data-speed="1250" data-offset="160" class="button button-large button-white button-light capitalize" style="border-radius: 23px;">下载IOS App</a>
-								<a href="#" data-scrollto="#section-pricing" data-easing="easeInOutExpo" data-speed="1250" data-offset="160" class="button button-large button-white button-light capitalize" style="border-radius: 23px;">下载安卓</a>
+								<a href="#" data-scrollto="#section-pricing" data-easing="easeInOutExpo" data-speed="1250" data-offset="160" class="button button-large button-white button-light capitalize" style="border-radius: 23px;">IOS 下载</a>
+								<a href="#" data-scrollto="#section-pricing" data-easing="easeInOutExpo" data-speed="1250" data-offset="160" class="button button-large button-white button-light capitalize" style="border-radius: 23px;">安卓下载</a>
 
 								<!-- <a href="https://www.youtube.com/watch?v=N_r349riLEE" class="hero-action-link" data-lightbox="iframe"><i class="icon-play-sign"></i> Watch the Video</a> -->
 							</div>
@@ -164,7 +164,7 @@
 								<img src="demos/app-landing/images/section/section-1-icon.png" alt="" style="display: block;" class="bottommargin-sm">
 								<div class="emphasis-title bottommargin-sm">
 									<span class="before-heading">Plug into the</span>
-									<h2 style="font-size: 42px;" class="font-body ls1 t400">特点</h2>
+									<h2 style="font-size: 42px;" class="font-body ls1 t400"></h2>
 								</div>
 								<p style="color: #777;" class="lead">IOS+Android 双平台 <br>涵盖100+餐厅，覆盖整个多伦多<br>支持在线支付</p>
 								<!-- <a href="#" class="section-more-link">Learn More <i class="icon-angle-right"></i></a> -->
@@ -175,7 +175,7 @@
 
 					<div class="line"></div><div class="clear"></div>
 
-					<div id="section-stunning-graphics" class="page-section topmargin bottommargin-lg">
+				<!--	<div id="section-stunning-graphics" class="page-section topmargin bottommargin-lg">
 						<div class="row clearfix">
 
 							<div class="col-md-5">
@@ -220,14 +220,14 @@
 						<div class="video-overlay hidden-xs hidden-sm" style="background: url('demos/app-landing/images/section/iphone-3d.png') no-repeat left top; background-size: auto 100%;" data-animate="fadeInLeft"></div>
 					</div>
 				</div>
-
+-->
 				<div class="clear bottommargin"></div>
 
 				<div class="container clearfix">
 
 					<div id="section-pricing" class="page-section nopadding nomargin">
 
-						<div class="pricing-tenure-switcher center bottommargin-sm" data-container="#pricing-switch">
+						<!--<div class="pricing-tenure-switcher center bottommargin-sm" data-container="#pricing-switch">
 							<span class="pts-left">Monthly</span>
 							<div class="pts-switcher">
 								<div class="switch">
@@ -236,7 +236,7 @@
 								</div>
 							</div>
 							<span class="pts-right">Yearly</span>
-						</div>
+						</div>-->
 
 						<div id="pricing-switch" class="pricing row bottommargin-lg clearfix">
 
@@ -250,13 +250,16 @@
 										IOS 下载<span class="price-tenure">扫描跳转到app store</span>
 									</div>
 									<div class="pricing-features">
-										<ul>
+									<!--	<ul>
 											<li><strong>Full</strong> Access</li>
 											<li><i class="icon-code"></i> Source Files</li>
 											<li><strong>100</strong> User Accounts</li>
 											<li><strong>1 Year</strong> License</li>
 											<li>Phone &amp; Email Support</li>
-										</ul>
+										</ul>-->
+										<center>
+											<img  src="C:\Users\shu\Desktop\chanmao.web\chanmao_web_home\images\qrcode\qrCode_itunes.png"/alt>
+                    </center>
 									</div>
 								</div>
 
@@ -269,10 +272,10 @@
 										<h3>安卓下载</h3>
 									</div>
 									<div class="pricing-price">
-										安卓下载<span class="price-tenure">Limited Access</span>
+										安卓下载<span class="price-tenure">扫码跳转Google play</span>
 									</div>
 									<div class="pricing-features">
-										<ul>
+									<!--	<ul>
 											<li><strong>Full</strong> Access</li>
 											<li><i class="icon-code"></i> Source Files</li>
 											<li><strong>1000</strong> User Accounts</li>
@@ -282,7 +285,10 @@
 											<i class="icon-star3"></i>
 											<i class="icon-star3"></i>
 											<i class="icon-star3"></i></li>
-										</ul>
+										</ul>-->
+										<center>
+											<img  src="C:\Users\shu\Desktop\chanmao.web\chanmao_web_home\images\qrcode\qrCode_googleplay.png"/alt>
+                    </center>
 									</div>
 								</div>
 
@@ -358,29 +364,29 @@
 							<h2 class="center font-body bottommargin-lg">Frequently Asked Questions</h2>
 
 							<div class="col-md-5 col-md-offset-1 col-sm-6 bottommargin-sm">
-								<h4 class="font-body" style="margin-bottom:15px;">How do I become an author?</h4>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, dolorum, vero ipsum molestiae minima odio quo voluptate illum excepturi quam cum voluptates doloribus quae nisi.</p>
+								<h4 class="font-body" style="margin-bottom:15px;">Q: 如何订餐?</h4>
+								<p>A：建议下载我们的iOS App订餐，Web版和Android版暂时只能支持有限的功能，我们会继续改进。</p>
 							</div>
 							<div class="col-md-5 col-sm-6 bottommargin-sm">
-								<h4 class="font-body" style="margin-bottom:15px;">Helpful Resources for Authors</h4>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, placeat, architecto rem dolorem dignissimos repellat veritatis in et eos doloribus magnam aliquam ipsa alias assumenda officiis quasi sapiente suscipit.</p>
+								<h4 class="font-body" style="margin-bottom:15px;">Q：起送最低价?</h4>
+								<p>A：现在使用iOS App订餐可以最低15元起送!记得升级到最新版哦～&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
 							</div>
 							<div class="col-md-5 col-md-offset-1 col-sm-6 bottommargin-sm">
-								<h4 class="font-body" style="margin-bottom:15px;">How much money can I make?</h4>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus, fugiat iste nisi tempore nesciunt nemo fuga? Nesciunt, delectus laboriosam nisi repudiandae nam fuga saepe animi recusandae.</p>
+								<h4 class="font-body" style="margin-bottom:15px;">Q：请问可以刷卡吗?</h4>
+								<p>A：我们现在收现金和信用卡(Visa, Master, AE)。暂时不能刷Debit卡和网上支付，未来会逐渐支持。</p>
 							</div>
 							<div class="col-md-5 col-sm-6 bottommargin-sm">
-								<h4 class="font-body" style="margin-bottom:15px;">Can I offer my items for free on a promotional basis?</h4>
-								<p>Laboriosam iusto quia nulla ad voluptatibus iste beatae voluptas corrupti facilis accusamus recusandae sequi debitis reprehenderit quibusdam. Facilis eligendi a exercitationem nisi et placeat excepturi velit!</p>
+								<h4 class="font-body" style="margin-bottom:15px;">Q：超出送餐范围能送吗?</h4>
+								<p>A：超出送餐范围的根据公里数不同送餐费不同，您可以选择“定制运费”然后下单，随后我们会有客服联系您确认运费的。</p>
 							</div>
-							<div class="col-md-5 col-md-offset-1 col-sm-6 bottommargin-sm">
+						<!--	<div class="col-md-5 col-md-offset-1 col-sm-6 bottommargin-sm">
 								<h4 class="font-body" style="margin-bottom:15px;">An Introduction to the Marketplaces for Authors</h4>
 								<p>Quisquam atque vero delectus corrupti! Quo, maiores, dolorem, hic commodi nulla ratione accusamus doloribus fuga magnam id temporibus dignissimos deleniti quidem ipsam corporis sapiente nam expedita saepe quas ab? Vero, assumenda.</p>
 							</div>
 							<div class="col-md-5 col-sm-6">
 								<h4 class="font-body" style="margin-bottom:15px;">How does the Tuts+ Premium affiliate program work?</h4>
 								<p class="nobottommargin">Reprehenderit similique nemo voluptate ullam natus illum magnam alias nobis doloremque delectus ipsa dicta repellat maxime dignissimos eveniet quae debitis ratione assumenda tempore officiis fugiat dolor.</p>
-							</div>
+							</div>-->
 
 						</div>
 
@@ -441,8 +447,8 @@
 
 					<div class="container topmargin bottommargin-lg center clearfix">
 
-						<h3 class="ls1 t400" style="font-size: 32px; margin-bottom: 10px;">App Screenshots</h3>
-						<p class="lead divcenter" style="max-width: 600px">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id, repellendus quae fuga ad, beatae odit.</p>
+						<h3 class="ls1 t400" style="font-size: 32px; margin-bottom: 10px;">使用说明:</h3>
+						<p class="lead divcenter" style="max-width: 600px">在您打开app并注册登录后, 会看到我们列出的餐厅列表, 您可以选择您喜欢的餐厅进行点餐. 在点餐结束后点击结账, 系统会为您跳转到结账页面并且自动添加您保存过的地址, 并且显示出当前的运费和账单金额总数. 在您确认订单后, XXXXXXX.</p>
 						<a href="#" class="button button-circle capitalize">Check All</a>
 
 					</div>
@@ -450,25 +456,25 @@
 					<div class="owl-carousel owl-carousel-full image-carousel carousel-widget bottommargin" data-margin="20" data-center="true" data-loop="true" data-nav="false" data-pagi="true" data-items-xxs="2" data-items-xs="2" data-items-sm="4" data-items-md="4" data-items-lg="6" data-stage-padding="30" data-lightbox="gallery">
 
 						<div class="oc-item">
-							<a data-lightbox="gallery-item" href="demos/app-landing/images/gallery/img-1.jpg"><img src="demos/app-landing/images/gallery/img-1.jpg" alt="Image 1"></a>
+							<a data-lightbox="gallery-item" href="C:\Users\shu\Desktop\chanmao.web\chanmao_web_home\images\gallery\signup.png"><img src="C:\Users\shu\Desktop\chanmao.web\chanmao_web_home\images\gallery\signup.png" alt="Image 1"></a>
 						</div>
 						<div class="oc-item">
-							<a data-lightbox="gallery-item" href="demos/app-landing/images/gallery/img-2.jpg"><img src="demos/app-landing/images/gallery/img-2.jpg" alt="Image 2"></a>
+							<a data-lightbox="gallery-item" href="C:\Users\shu\Desktop\chanmao.web\chanmao_web_home\images\gallery\firstpage.png"><img src="C:\Users\shu\Desktop\chanmao.web\chanmao_web_home\images\gallery\firstpage.png" alt="Image 2"></a>
 						</div>
 						<div class="oc-item">
-							<a data-lightbox="gallery-item" href="demos/app-landing/images/gallery/img-3.jpg"><img src="demos/app-landing/images/gallery/img-3.jpg" alt="Image 3"></a>
+							<a data-lightbox="gallery-item" href="C:\Users\shu\Desktop\chanmao.web\chanmao_web_home\images\gallery\yourfav.png"><img src="C:\Users\shu\Desktop\chanmao.web\chanmao_web_home\images\gallery\yourfav.png" alt="Image 3"></a>
 						</div>
 						<div class="oc-item">
-							<a data-lightbox="gallery-item" href="demos/app-landing/images/gallery/img-4.jpg"><img src="demos/app-landing/images/gallery/img-4.jpg" alt="Image 4"></a>
+							<a data-lightbox="gallery-item" href="C:\Users\shu\Desktop\chanmao.web\chanmao_web_home\images\gallery\yourfav2.png"><img src="C:\Users\shu\Desktop\chanmao.web\chanmao_web_home\images\gallery\yourfav2.png" alt="Image 4"></a>
 						</div>
 						<div class="oc-item">
-							<a data-lightbox="gallery-item" href="demos/app-landing/images/gallery/img-5.jpg"><img src="demos/app-landing/images/gallery/img-5.jpg" alt="Image 5"></a>
+							<a data-lightbox="gallery-item" href="C:\Users\shu\Desktop\chanmao.web\chanmao_web_home\images\gallery\chooserestaurant.png"><img src="C:\Users\shu\Desktop\chanmao.web\chanmao_web_home\images\gallery\chooserestaurant.png" alt="Image 5"></a>
 						</div>
 						<div class="oc-item">
-							<a data-lightbox="gallery-item" href="demos/app-landing/images/gallery/img-6.jpg"><img src="demos/app-landing/images/gallery/img-6.jpg" alt="Image 5"></a>
+							<a data-lightbox="gallery-item" href="C:\Users\shu\Desktop\chanmao.web\chanmao_web_home\images\gallery\order.png"><img src="C:\Users\shu\Desktop\chanmao.web\chanmao_web_home\images\gallery\order.png" alt="Image 6"></a>
 						</div>
 						<div class="oc-item">
-							<a data-lightbox="gallery-item" href="demos/app-landing/images/gallery/img-7.jpg"><img src="demos/app-landing/images/gallery/img-7.jpg" alt="Image 5"></a>
+							<a data-lightbox="gallery-item" href="C:\Users\shu\Desktop\chanmao.web\chanmao_web_home\images\gallery\checkout.png"><img src="C:\Users\shu\Desktop\chanmao.web\chanmao_web_home\images\gallery\checkout.png" alt="Image 7"></a>
 						</div>
 
 					</div>
@@ -544,7 +550,7 @@
 				<div class="section center nobottommargin nobg">
 					<div class="container clearfix">
 
-						<h3 class="ls1 t400" style="font-size: 32px;">Experienced &amp; Trusted by <span>16,000+</span> People worldwide</h3>
+						<h3 class="ls1 t400" style="font-size: 32px;">Experienced &amp; Trusted by <span>30,000+</span> People worldwide</h3>
 						<a href="#modal-login" data-lightbox="inline" class="button button-large button-black capitalize" style="border-radius: 23px;">Login Now</a>
 						<a href="#" data-scrollto="#section-pricing" data-easing="easeInOutExpo" data-speed="1250" data-offset="160" class="button button-large capitalize" style="border-radius: 23px;">Try it Free</a>
 
@@ -592,7 +598,8 @@
 								<div class="row clearfix">
 									<div class="col-md-8 bottommargin-sm clearfix" style="color:#888;">
 										<img src="demos/app-landing/images/footer-logo.png" alt="Canvas Logo" style="display: block;" class="bottommargin-sm">
-										<p>客服及合作电话: 647-515-6699</p>
+										<p>客服电话: 647-515-6699</p>
+								   	<p>商务合作: 647 205-6668</p>
 										<p>微信公众账号: chanmaoweixin</p>
 										<p>微博: chanmaochanmao</p>
 
