feat(fix images)fix images address

--- a/chanmao.html
+++ b/chanmao.html
@@ -258,7 +258,7 @@
 											<li>Phone &amp; Email Support</li>
 										</ul>-->
 										<center>
-											<img  src="C:\Users\shu\Desktop\chanmao.web\chanmao_web_home\images\qrcode\qrCode_itunes.png"/alt>
+											<img  src=".\images\qrcode\qrCode_itunes.png"/alt>
                     </center>
 									</div>
 								</div>
@@ -287,7 +287,7 @@
 											<i class="icon-star3"></i></li>
 										</ul>-->
 										<center>
-											<img  src="C:\Users\shu\Desktop\chanmao.web\chanmao_web_home\images\qrcode\qrCode_googleplay.png"/alt>
+											<img  src=".\images\qrcode\qrCode_googleplay.png"/alt>
                     </center>
 									</div>
 								</div>
@@ -456,25 +456,25 @@
 					<div class="owl-carousel owl-carousel-full image-carousel carousel-widget bottommargin" data-margin="20" data-center="true" data-loop="true" data-nav="false" data-pagi="true" data-items-xxs="2" data-items-xs="2" data-items-sm="4" data-items-md="4" data-items-lg="6" data-stage-padding="30" data-lightbox="gallery">
 
 						<div class="oc-item">
-							<a data-lightbox="gallery-item" href="C:\Users\shu\Desktop\chanmao.web\chanmao_web_home\images\gallery\signup.png"><img src="C:\Users\shu\Desktop\chanmao.web\chanmao_web_home\images\gallery\signup.png" alt="Image 1"></a>
+							<a data-lightbox="gallery-item" href=".\images\gallery\signup.png"><img src=".\images\gallery\signup.png" alt="Image 1"></a>
 						</div>
 						<div class="oc-item">
-							<a data-lightbox="gallery-item" href="C:\Users\shu\Desktop\chanmao.web\chanmao_web_home\images\gallery\firstpage.png"><img src="C:\Users\shu\Desktop\chanmao.web\chanmao_web_home\images\gallery\firstpage.png" alt="Image 2"></a>
+							<a data-lightbox="gallery-item" href=".\images\gallery\firstpage.png"><img src=".\images\gallery\firstpage.png" alt="Image 2"></a>
 						</div>
 						<div class="oc-item">
-							<a data-lightbox="gallery-item" href="C:\Users\shu\Desktop\chanmao.web\chanmao_web_home\images\gallery\yourfav.png"><img src="C:\Users\shu\Desktop\chanmao.web\chanmao_web_home\images\gallery\yourfav.png" alt="Image 3"></a>
+							<a data-lightbox="gallery-item" href=".\images\gallery\yourfav.png"><img src=".\images\gallery\yourfav.png" alt="Image 3"></a>
 						</div>
 						<div class="oc-item">
-							<a data-lightbox="gallery-item" href="C:\Users\shu\Desktop\chanmao.web\chanmao_web_home\images\gallery\yourfav2.png"><img src="C:\Users\shu\Desktop\chanmao.web\chanmao_web_home\images\gallery\yourfav2.png" alt="Image 4"></a>
+							<a data-lightbox="gallery-item" href=".\images\gallery\yourfav2.png"><img src=".\images\gallery\yourfav2.png" alt="Image 4"></a>
 						</div>
 						<div class="oc-item">
-							<a data-lightbox="gallery-item" href="C:\Users\shu\Desktop\chanmao.web\chanmao_web_home\images\gallery\chooserestaurant.png"><img src="C:\Users\shu\Desktop\chanmao.web\chanmao_web_home\images\gallery\chooserestaurant.png" alt="Image 5"></a>
+							<a data-lightbox="gallery-item" href=".\images\gallery\chooserestaurant.png"><img src=".\images\gallery\chooserestaurant.png" alt="Image 5"></a>
 						</div>
 						<div class="oc-item">
-							<a data-lightbox="gallery-item" href="C:\Users\shu\Desktop\chanmao.web\chanmao_web_home\images\gallery\order.png"><img src="C:\Users\shu\Desktop\chanmao.web\chanmao_web_home\images\gallery\order.png" alt="Image 6"></a>
+							<a data-lightbox="gallery-item" href=".\images\gallery\order.png"><img src=".\images\gallery\order.png" alt="Image 6"></a>
 						</div>
 						<div class="oc-item">
-							<a data-lightbox="gallery-item" href="C:\Users\shu\Desktop\chanmao.web\chanmao_web_home\images\gallery\checkout.png"><img src="C:\Users\shu\Desktop\chanmao.web\chanmao_web_home\images\gallery\checkout.png" alt="Image 7"></a>
+							<a data-lightbox="gallery-item" href=".\images\gallery\checkout.png"><img src=".\images\gallery\checkout.png" alt="Image 7"></a>
 						</div>
 
 					</div>
