--- a/chanmao.html
+++ b/chanmao.html
@@ -8,7 +8,7 @@
 	<!-- Stylesheets
 	============================================= -->
 	<link href="http://fonts.googleapis.com/css?family=Poppins:300,400,400italic,600,700|Montserrat:400,700|Merriweather" rel="stylesheet" type="text/css" />
-	<link rel="stylesheet" href="css/bootstrap.css" type="text/css" />
+	<link rel="stylesheet" href="./css/bootstrap.css" type="text/css" />
 	<link rel="stylesheet" href="style.css" type="text/css" />
 	<link rel="stylesheet" href="css/dark.css" type="text/css" />
 
@@ -94,7 +94,7 @@
 		</header><!-- #header end -->
 
 		<section id="slider" class="full-screen slider-parallax">
-			<div class="slider-parallax-inner" style="background: url('demos/app-landing/images/hero/hero.jpg') center center no-repeat; background-size: cover;">
+			<div class="slider-parallax-inner" style="background: url('images/home2.png') center center no-repeat; background-size: cover;">
 				<div class="vertical-middle" style="z-index: 2;">
 					<div class="container dark clearfix">
 						<div class="row clearfix">
@@ -102,8 +102,61 @@
 								<div class="emphasis-title">
 									<h1 class="font-body">馋猫，<br>&nbsp;&nbsp;让美食来敲门.</h1>
 								</div>
-								<a href="#" data-scrollto="#section-pricing" data-easing="easeInOutExpo" data-speed="1250" data-offset="160" class="button button-large button-white button-light capitalize" style="border-radius: 23px;">IOS 下载</a>
-								<a href="#" data-scrollto="#section-pricing" data-easing="easeInOutExpo" data-speed="1250" data-offset="160" class="button button-large button-white button-light capitalize" style="border-radius: 23px;">安卓下载</a>
+								<div id="ios-download">
+									<a href="#" data-scrollto="#section-pricing"
+															data-easing="easeInOutExpo"
+															data-speed="1250"
+															data-offset="160"
+															class=" button
+																			button-large
+																			button-white
+																			button-light
+																			capitalize"
+															style="border-radius: 23px;
+																		 text-transform: none;">
+															iOS 下载
+									</a>
+									<a href="#" data-scrollto="#section-pricing"
+															data-easing="easeInOutExpo"
+															data-speed="1250"
+															data-offset="160"
+															class=" button
+																			button-large
+																			button-white
+																			button-light
+																			capitalize"
+															style="border-radius: 23px;">
+															安卓下载
+									</a>
+								</div>
+
+								<a id="ios-download-mobi"href="https://itunes.apple.com/ca/app/chan-mao-ding-can/id888553991?mt=8"
+														data-easing="easeInOutExpo"
+														data-speed="1250"
+														data-offset="160"
+														class=" button
+																		button-large
+																		button-white
+																		button-light
+																		capitalize"
+														style=" border-radius: 23px;
+																		text-transform: none;">
+														iOS 下载
+								</a>
+
+								<a id="ios-download-mobi"href="https://play.google.com/store/apps/details?id=ca.chanmao.orderapp"
+														data-easing="easeInOutExpo"
+														data-speed="1250"
+														data-offset="160"
+														class=" button
+																		button-large
+																		button-white
+																		button-light
+																		capitalize"
+														style=" border-radius: 23px;
+																		text-transform: none;">
+														安卓下载
+								</a>
 
 								<!-- <a href="https://www.youtube.com/watch?v=N_r349riLEE" class="hero-action-link" data-lightbox="iframe"><i class="icon-play-sign"></i> Watch the Video</a> -->
 							</div>
@@ -156,14 +209,14 @@
 						<div class="row clearfix">
 
 							<div class="col-md-7 center">
-								<img src="demos/app-landing/images/section/iphone-watch.png" alt="NextGen Framework" data-animate="fadeInLeft">
+								<img src="images/screenshots.png" alt="NextGen Framework" data-animate="fadeInLeft" style="width: 72%;">
 							</div>
 
-							<div class="col-md-5">
+							<div class="col-md-5 hidden-xs">
 								<div class="topmargin-lg hidden-xs hidden-sm"></div>
 								<img src="demos/app-landing/images/section/section-1-icon.png" alt="" style="display: block;" class="bottommargin-sm">
 								<div class="emphasis-title bottommargin-sm">
-									<span class="before-heading">Plug into the</span>
+									<!-- <span class="before-heading">Plug into the</span> -->
 									<h2 style="font-size: 42px;" class="font-body ls1 t400"></h2>
 								</div>
 								<p style="color: #777;" class="lead">IOS+Android 双平台 <br>涵盖100+餐厅，覆盖整个多伦多<br>支持在线支付</p>
@@ -221,7 +274,7 @@
 					</div>
 				</div>
 -->
-				<div class="clear bottommargin"></div>
+				<div class="clear bottommargin "></div>
 
 				<div class="container clearfix">
 
@@ -238,16 +291,16 @@
 							<span class="pts-right">Yearly</span>
 						</div>-->
 
-						<div id="pricing-switch" class="pricing row bottommargin-lg clearfix">
+						<div id="qrCodeBox" class="pricing row bottommargin-lg clearfix">
 
-							<div class="col-md-6 col-sm-10">
+							<div class="col-md-6 col-sm-4 col-xs-6">
 
 								<div class="pricing-box">
 									<div class="pricing-title">
-										<h3>IOS 下载</h3>
+										<h3 >iOS 下载</h3>
 									</div>
 									<div class="pricing-price">
-										IOS 下载<span class="price-tenure">扫描跳转到app store</span>
+										<span class="price-tenure">扫描跳转到app store</span>
 									</div>
 									<div class="pricing-features">
 									<!--	<ul>
@@ -265,14 +318,14 @@
 
 							</div>
 
-							<div class="col-md-6 col-sm-10">
+							<div class="col-md-6 col-sm-4 col-xs-6">
 
 								<div class="pricing-box">
 									<div class="pricing-title">
-										<h3>安卓下载</h3>
+										<h3 >安卓下载</h3>
 									</div>
-									<div class="pricing-price">
-										安卓下载<span class="price-tenure">扫码跳转Google play</span>
+									<div class="pricing-price" >
+										<span class="price-tenure">扫码跳转Google play</span>
 									</div>
 									<div class="pricing-features">
 									<!--	<ul>
@@ -394,52 +447,6 @@
 
 				</div>
 
-				<div class="section bottommargin-lg" style="background-color: #F8FAFB; border-top: 1px solid #E5E5E5; border-bottom: 1px solid #E5E5E5;">
-
-					<div class="fslider testimonial testimonial-full nobg noborder noshadow" data-animation="fade" style="max-width: none;">
-						<div class="flexslider">
-							<div class="slider-wrap divcenter" style="max-width: 650px;">
-								<div class="slide">
-									<div class="testi-image">
-										<a href="#"><img src="images/testimonials/3.jpg" alt="Customer Testimonails"></a>
-									</div>
-									<div class="testi-content">
-										<p>Similique fugit repellendus expedita excepturi iure provident quia eaque. Repellendus, vero numquam?</p>
-										<div class="testi-meta">
-											Steve Jobs
-											<span>Apple Inc.</span>
-										</div>
-									</div>
-								</div>
-								<div class="slide">
-									<div class="testi-image">
-										<a href="#"><img src="images/testimonials/2.jpg" alt="Customer Testimonails"></a>
-									</div>
-									<div class="testi-content">
-										<p>Natus voluptatum enim quod necessitatibus quis expedita harum provident eos obcaecati id culpa corporis molestias.</p>
-										<div class="testi-meta">
-											Collis Ta'eed
-											<span>Envato Inc.</span>
-										</div>
-									</div>
-								</div>
-								<div class="slide">
-									<div class="testi-image">
-										<a href="#"><img src="images/testimonials/1.jpg" alt="Customer Testimonails"></a>
-									</div>
-									<div class="testi-content">
-										<p>Incidunt deleniti blanditiis quas aperiam recusandae consequatur ullam quibusdam cum libero illo rerum!</p>
-										<div class="testi-meta">
-											John Doe
-											<span>XYZ Inc.</span>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-
-				</div>
 
 				<div class="clear"></div>
 
@@ -491,92 +498,6 @@
 					</div>
 				</div> -->
 
-				<div class="section" style="padding: 30px 0; color: #999; background-color: #F8FAFB; border-top: 1px solid #E5E5E5; border-bottom: 1px solid #E5E5E5;">
-					<div class="container clearfix">
-						<div class="row topmargin-lg clearfix">
-
-							<div class="col-md-4 bottommargin">
-								<i class="i-plain i-large icon-et-browser inline-block" style="margin-bottom: 30px; color: #999;"></i>
-								<div class="heading-block nobottomborder" style="margin-bottom: 15px;">
-									<h4 style="font-size: 16px;">Cross Browser</h4>
-								</div>
-								<p class="" style="line-height: 26px;">Canvas 4 Loads Faster &amp; Smoother than the Previous Versions providing an Optimal Experience for your Users.</p>
-							</div>
-
-							<div class="col-md-4 bottommargin">
-								<i class="i-plain i-large icon-et-adjustments inline-block" style="margin-bottom: 30px; color: #999;"></i>
-								<div class="heading-block nobottomborder" style="margin-bottom: 15px;">
-									<h4 style="font-size: 16px;">Flexible Options</h4>
-								</div>
-								<p class="" style="line-height: 26px;">Unleash the Power of Mega Menus by adding Widgets &amp; Mixed Columns powered by the Bootstrap Grid.</p>
-							</div>
-
-							<div class="col-md-4 bottommargin">
-								<i class="i-plain i-large icon-et-calendar inline-block" style="margin-bottom: 30px; color: #999;"></i>
-								<div class="heading-block nobottomborder" style="margin-bottom: 15px;">
-									<h4 style="font-size: 16px;">Scheduled Backups</h4>
-								</div>
-								<p class="" style="line-height: 26px;">Amazing set of New Components giving you Opportunity to Create an Interactive Website for your Business.</p>
-							</div>
-
-							<div class="col-md-4 bottommargin">
-								<i class="i-plain i-large icon-et-desktop inline-block" style="margin-bottom: 30px; color: #999;"></i>
-								<div class="heading-block nobottomborder" style="margin-bottom: 15px;">
-									<h4 style="font-size: 16px;">Responsive Ready</h4>
-								</div>
-								<p class="" style="line-height: 26px;">Convert any Grid to an Isotope Grid easily with Filterable Options making it extremely flexible and powerful.</p>
-							</div>
-
-							<div class="col-md-4 bottommargin">
-								<i class="i-plain i-large icon-et-bargraph inline-block" style="margin-bottom: 30px; color: #999;"></i>
-								<div class="heading-block nobottomborder" style="margin-bottom: 15px;">
-									<h4 style="font-size: 16px;">Increased Conversions</h4>
-								</div>
-								<p class="" style="line-height: 26px;">Display an Alternate Lighter Menu on Responsive Devices with the same Markup Code as before. Awesomely Useful.</p>
-							</div>
-
-							<div class="col-md-4 bottommargin">
-								<i class="i-plain i-large icon-et-cloud inline-block" style="margin-bottom: 30px; color: #999;"></i>
-								<div class="heading-block nobottomborder" style="margin-bottom: 15px;">
-									<h4 style="font-size: 16px;">Cloud Sharing</h4>
-								</div>
-								<p class="" style="line-height: 26px;">Added SPAM Protection for your Precious Forms so that you receive Emails only from Authentic Real Users.</p>
-							</div>
-
-						</div>
-					</div>
-				</div>
-
-				<div class="section center nobottommargin nobg">
-					<div class="container clearfix">
-
-						<h3 class="ls1 t400" style="font-size: 32px;">Experienced &amp; Trusted by <span>30,000+</span> People worldwide</h3>
-						<a href="#modal-login" data-lightbox="inline" class="button button-large button-black capitalize" style="border-radius: 23px;">Login Now</a>
-						<a href="#" data-scrollto="#section-pricing" data-easing="easeInOutExpo" data-speed="1250" data-offset="160" class="button button-large capitalize" style="border-radius: 23px;">Try it Free</a>
-
-						<div class="clear bottommargin"></div>
-
-					</div>
-				</div>
-
-				<div class="section notopmargin footer-stick" style="padding: 10px 0; background-color: #F8FAFB; border-top: 1px solid #E5E5E5;">
-					<div class="container clearfix">
-
-						<div class="row clearfix">
-							<div class="col-md-4">
-								<div class="app-footer-features"><i class="icon-line2-globe-alt"></i><h5 class="font-body"><a href="#">Free Taining</a><span> &amp; 24-hour coverage</span></h5></div>
-							</div>
-							<div class="col-md-4">
-								<div class="app-footer-features"><i class="icon-line2-notebook"></i><h5 class="font-body"><a href="#">99.99% Uptime</a><span> the last 12 months</span></h5></div>
-							</div>
-							<div class="col-md-4">
-								<div class="app-footer-features"><i class="icon-line2-lock"></i><h5 class="font-body"><span>Serious about</span> <a href="#">Security</a> <span>&amp;</span> <a href="#">Privacy</a></h5></div>
-							</div>
-						</div>
-
-					</div>
-				</div>
-
 			</div>
 
 		</section><!-- #content end -->
@@ -597,37 +518,13 @@
 							<div class="widget clearfix">
 								<div class="row clearfix">
 									<div class="col-md-8 bottommargin-sm clearfix" style="color:#888;">
-										<img src="demos/app-landing/images/footer-logo.png" alt="Canvas Logo" style="display: block;" class="bottommargin-sm">
-										<p>客服电话: 647-515-6699</p>
-								   	<p>商务合作: 647 205-6668</p>
-										<p>微信公众账号: chanmaoweixin</p>
-										<p>微博: chanmaochanmao</p>
-
-										<a href="#" class="social-icon si-small si-borderless si-colored si-rounded si-facebook">
-											<i class="icon-facebook"></i>
-											<i class="icon-facebook"></i>
-										</a>
-
-										<a href="#" class="social-icon si-small si-borderless si-colored si-rounded si-twitter">
-											<i class="icon-twitter"></i>
-											<i class="icon-twitter"></i>
-										</a>
-
-										<a href="#" class="social-icon si-small si-borderless si-colored si-rounded si-gplus">
-											<i class="icon-gplus"></i>
-											<i class="icon-gplus"></i>
-										</a>
-
-										<a href="#" class="social-icon si-small si-borderless si-colored si-rounded si-pinterest">
-											<i class="icon-pinterest"></i>
-											<i class="icon-pinterest"></i>
-										</a>
-
-										<a href="#" class="social-icon si-small si-borderless si-colored si-rounded si-vimeo">
-											<i class="icon-vimeo"></i>
-											<i class="icon-vimeo"></i>
-										</a>
-
+										<img src="https://www.chanmao.ca/img/cmbottom.png" alt="Canvas Logo" style="display: block;width: 60%;" class="bottommargin-sm">
+										<p style=" line-height: 23px;">
+												客服电话: 647-515-6699<br>
+											 	商务合作: 647 205-6668<br>
+											 	微信公众账号: chanmaoweixin<br>
+											 	微博: chanmaochanmao
+										</p>
 									</div>
 								</div>
 							</div>
@@ -637,46 +534,20 @@
 						<div class="col-md-7">
 							<div class="row clearfix">
 
-								<div class="col-md-4 bottommargin-sm">
+								<div class="col-md-4 col-xs-6">
 									<div class="widget widget_links app_landing_widget_link clearfix">
-										<h4>In News</h4>
+										<h4>微信公众号</h4>
 
-										<ul>
-											<li><a href="http://codex.wordpress.org/">Documentation</a></li>
-											<li><a href="http://wordpress.org/support/forum/requests-and-feedback">Feedback</a></li>
-											<li><a href="http://wordpress.org/extend/plugins/">Plugins</a></li>
-											<li><a href="http://wordpress.org/support/">Support Forums</a></li>
-											<li><a href="http://wordpress.org/extend/themes/">Themes</a></li>
-										</ul>
+											<img  src=".\images\qrcode\qrCode_weixin.png"/alt>
 									</div>
 								</div>
-								<div class="col-md-4 bottommargin-sm">
+								<div class="col-md-4 col-xs-6">
 									<div class="widget widget_links app_landing_widget_link clearfix">
-										<h4>About Us</h4>
+										<h4>微博</h4>
+											<img  src=".\images\qrcode\qrCode_weibo.png"/alt>
 
-										<ul>
-											<li><a href="http://codex.wordpress.org/">Documentation</a></li>
-											<li><a href="http://wordpress.org/support/forum/requests-and-feedback">Feedback</a></li>
-											<li><a href="http://wordpress.org/extend/plugins/">Plugins</a></li>
-											<li><a href="http://wordpress.org/support/">Support Forums</a></li>
-											<li><a href="http://wordpress.org/extend/themes/">Themes</a></li>
-										</ul>
 									</div>
 								</div>
-								<div class="col-md-4 bottommargin-sm">
-									<div class="widget widget_links app_landing_widget_link clearfix">
-										<h4>Support</h4>
-
-										<ul>
-											<li><a href="http://codex.wordpress.org/">Documentation</a></li>
-											<li><a href="http://wordpress.org/support/forum/requests-and-feedback">Feedback</a></li>
-											<li><a href="http://wordpress.org/extend/plugins/">Plugins</a></li>
-											<li><a href="http://wordpress.org/support/">Support Forums</a></li>
-											<li><a href="http://wordpress.org/extend/themes/">Themes</a></li>
-										</ul>
-									</div>
-								</div>
-
 							</div>
 						</div>
 
@@ -691,7 +562,7 @@
 
 				<div class="container clearfix">
 
-					<div class="col_half">
+					<div style="text-align: center;width: 100%;">
 						Copyrights &copy; 2012-2016 All Rights Reserved by Chanmao Inc.<br>
 						<div class="copyright-links"><a href="#">Terms of Use</a> / <a href="#">Privacy Policy</a></div>
 					</div>
